<resources>

    <string name="app_name">LePoox</string>

    <string name="contentDescriptionBackground">Background</string>
    <string name="contentDescriptionAddition">Addition</string>
    <string name="contentDescriptionSubtraction">Subtraction</string>
    <string name="contentDescriptionMultiplication">Multiplication</string>
    <string name="contentDescriptionReset">Reset</string>
    <string name="contentDescriptionDone">Done</string>
    <string name="title_activity_game_mode">GameModeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_two_player">TwoPlayerActivity</string>
    <string name="title_activity_host_game">HostGameActivity</string>
    <string name="title_activity_join_game">JoinGameActivity</string>
    <string name="title_activity_won">WonActivity</string>
    <string name="title_activity_lost">LostActivity</string>

</resources>
